syntax = "proto3";
option java_package = "com.ubtechinc.alpha";
message CmAppUninstallInfoRequest {

    string packageName = 1;
    string name = 2;
    bool isUnInstallSuccess = 3;

}

message CmAppUninstallInfoResponse {

    string packageName = 1;
    string name = 2;
    bool isUnInstallSuccess = 3;

}
