syntax = "proto3";
option java_package = "com.ubtechinc.alpha";
message CmAppUninstallRobotInfoRequest {

    string packageName = 1;
    string name = 2;
    bytes icon = 3;
    int64 appSize = 4;

}

message CmAppUninstallRobotInfoResponse {

    string packageName = 1;
    string name = 2;
    bytes icon = 3;
    int64 appSize = 4;

}
