syntax = "proto3";
option java_package = "com.ubtechinc.alpha";

message CmStartAppRequest {

    string packageName = 1;
    string name = 2;

}

message CmStartAppResponse {

    bool isSuccess = 1;
    int32 resultCode = 2;

}


