syntax = "proto3";
option java_package = "com.ubtechinc.alpha";

message CmUninstallAppRequest {

    string packageName = 1;
    string appkey = 2;
}

message CmUninstallAppResponse {

    bool isSuccess = 1;
    int32 resultCode = 2;

}

